--- a/PROJECT/main.css
+++ b/PROJECT/main.css
@@ -22,87 +22,7 @@ a {
 
 .container{
     color: rgb(100, 100, 100);
-
 }
-
-.global-nav{
-    height: 48px;
-    background-color: #333333;
-    border-top: #333333;
-    border-bottom: #333333;
-}
-
-.global-nav-links{
-    /* flex처리, 균일하게 배치 */
-    /* display: flex;
-    justify-content: space-between;
-    align-items: center; */
-
-    /* 너비 및 마진설정 */
-    max-width: 1000px;
-    margin: 0 auto;
-    height: 100%;
-    line-height: 48px;
-}
-
-.global-nav-links-m{
-    display: inline;
-    justify-content: center;
-    max-width: 300px;
-    margin: 0 auto;
-}
-
-.global-nav-item{
-    color: #f5f5f7;
-    font-size: 1.1rem;
-    font-style: normal;
-    -webkit-transition-duration: 0.2s; /* Safari */
-    transition-duration: 0.2s;
-}
-
-.global-nav-item:hover{
-    color: #8a8a8a;
-
-}
-
-#global-nav-item-home {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    display: inline-block;
-    position: relative;
-    width: 37px;
-    height: 48px;
-    z-index: 1;
-    vertical-align: top;
-    background-size: 57px;
-    background-repeat: no-repeat;
-    background-image: url(./LOGO\ black.png);
-
-    background-position: center center;
-}
-    
-.global-nav-item-home-1{
-    position: absolute;
-    clip: rect(1px, 1px, 1px, 1px);
-    -webkit-clip-path: inset(0px 0px 99.9% 99.9%);
-    clip-path: inset(0px 0px 99.9% 99.9%);
-    overflow: hidden;
-    height: 1px;
-    width: 1px;
-    padding: 0;
-    border: 0;
-    top: 50%;
-}
-
-.global-nav-item:not(.global-nav-item:nth-child(1)){
-    margin-left: 30px;
-}
-
-.global-nav-item:nth-child(6){
-    float: right;
-}
-
-
 
 .local-nav-links{
     margin: 0 auto;
@@ -124,12 +44,21 @@ a {
     text-align: center;
 }
 
+.local-nav-links-1{
+    display: flex;
+    align-items: center;
+    max-width: 1000px;
+
+    opacity: 0.5;
+}
+
 #id_title{
     margin-top:188px;
     font-size: 80px;
     font-weight: 700;
     color : #1d1d1f;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    max-width: 500px;
 }
 
 .fadein-items{
@@ -140,6 +69,11 @@ a {
 
 #id_img{
     margin-top: 188px;
+}
+
+#id_mainIMG{
+    width: 500px;
+    height: 500px;
 }
 
 #id_ytb{
